--- a/smartedu_con/templates/login.html
+++ b/smartedu_con/templates/login.html
@@ -17,22 +17,29 @@
               <!-- Tab panes -->
               <div class="tab-content">
                   <div class="tab-pane active" id="Login">
-                      <form role="form" class="form-horizontal">
+                      <form method="POST" role="form" class="form-horizontal">
+                          {% csrf_token %}
+                          {% if messages %}
+                            {% for message in messages%}
+                            <div class="alert alert-{{message.tags}}">
+                                {{message}}
+                            </div>
+                            {% endfor %}
+                          {% endif %}
                           <div class="form-group">
                               <div class="col-sm-12">
-                                  <input class="form-control" id="email1" placeholder="Name" type="text">
+                                 {{form.username}}
                               </div>
                           </div>
                           <div class="form-group">
                               <div class="col-sm-12">
-                                  <input class="form-control" id="exampleInputPassword1" placeholder="Email" type="email">
+                                  {{form.password}}
                               </div>
                           </div>
                           <div class="row">
                               <div class="col-sm-10">
-                                  <button type="submit" class="btn btn-light btn-radius btn-brd grd1">
-                                      Submit
-                                  </button>
+                                  <input type="submit" value="SUBMIt" class="btn btn-light btn-radius btn-brd grd1">
+                                      
                                  
                               </div>
                           </div>
