--- a/smartedu_con/templates/register.html
+++ b/smartedu_con/templates/register.html
@@ -3,9 +3,7 @@
 
 {% block content %}
 
-<div class="modal fade" id="logreg" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-
-    
+<div class="modal fade show" id="logreg" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
       <div class="modal-content">
           <div class="modal-header tit-up">
@@ -13,40 +11,44 @@
               <h4 class="modal-title">Register</h4>
           </div>
           <div class="modal-body customer-box">
-              <!-- Nav tabs -->
-             
               <!-- Tab panes -->
               <div class="tab-content">
-                  
                   <div class="tab-pane active" id="Registration">
-                      <form role="form" class="form-horizontal">
+                      <form method="POST" role="form" class="form-horizontal">
+                        {% csrf_token %}
                           <div class="form-group">
                               <div class="col-sm-12">
-                                  <input class="form-control" placeholder="Name" type="text">
+                                  {{form.first_name}}
                               </div>
                           </div>
                           <div class="form-group">
                               <div class="col-sm-12">
-                                  <input class="form-control" id="email" placeholder="Email" type="email">
+                                {{form.last_name}}
                               </div>
                           </div>
                           <div class="form-group">
                               <div class="col-sm-12">
-                                  <input class="form-control" id="mobile" placeholder="Mobile" type="email">
+                                {{form.username}}
                               </div>
                           </div>
                           <div class="form-group">
                               <div class="col-sm-12">
-                                  <input class="form-control" id="password" placeholder="Password" type="password">
+                                {{form.email}}
                               </div>
                           </div>
+                          <div class="form-group">
+                            <div class="col-sm-12">
+                              {{form.password1}}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-12">
+                              {{form.password2}}
+                            </div>
+                        </div>
                           <div class="row">							
                               <div class="col-sm-10">
-                                  <button type="button" class="btn btn-light btn-radius btn-brd grd1">
-                                      Save &amp; Continue
-                                  </button>
-                                  <button type="button" class="btn btn-light btn-radius btn-brd grd1">
-                                      Cancel</button>
+                                <input type="submit" value="Register" class="btn btn-light btn-radius btn-brd grd1">
                               </div>
                           </div>
                       </form>
@@ -56,6 +58,7 @@
       </div>
     </div>
   </div>
+
   <div id="carouselExampleControls" class="carousel slide bs-slider box-slider" data-ride="carousel" data-pause="hover" data-interval="false" >
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -136,4 +139,5 @@
         </a>
     </div>
 </div>
+
 {% endblock %}
